GNOME Bugzilla – Bug 739975
Seeking through some AAC file freezes my application
Last modified: 2015-01-19 17:52:14 UTC
My app freezes when trying to seek a different position in this AAC file (and others). The playback works fine though. https://www.mediafire.com/?2ifpr57a0p7xd82 On some tools, I noted that the bitrate is reported to be 0kb/s Debug log: (GST_DEBUG=3) 0:00:03.826122256 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:03.826221228 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:03.844679322 4577 0x136fb20 WARN qtdemux qtdemux.c:7977:qtdemux_parse_trak:<qtdemux0> unknown version 00000000 0:00:04.827471069 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:04.827679946 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:04.827741936 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:04.827795498 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:04.827838896 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again I/O warning : failed to load HTTP resource I/O warning : failed to load HTTP resource 0:00:19.134080028 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:19.134217945 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:19.134266470 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:19.134319400 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again 0:00:19.134365555 4577 0xf81900 FIXME bin gstbin.c:4008:gst_bin_query: implement duration caching in GstBin again
Can't download the file, says 'permission denied' from mediafire. Try compressing it with 'xz -9' or so.
I tried your advice and put in on dropbox : https://www.dropbox.com/s/fvcnb1sln41yy4k/Soldier-qFJ3VKnwmJw.m4a.xz?dl=0
commit d854cfff9d7602a8a13e950beff4b90660488d38 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Mon Jan 19 17:49:54 2015 +0000 qtdemux: fix deadlock seeking in files without seek entries A mutex unlock was missing. https://bugzilla.gnome.org/show_bug.cgi?id=739975