qtdemux: fix deadlock seeking in files without seek entries

A mutex unlock was missing.

https://bugzilla.gnome.org/show_bug.cgi?id=739975